objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Purchased_Makers__c</fullName>
        <formula>Project__r.Purchased_Makers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchased Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunded_Charges__c</fullName>
        <label>Refunded Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retained_Charges__c</fullName>
        <label>Retained Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S_0_1_or_Disqual__c</fullName>
        <formula>Max_Stage_Achieved__c &gt;= 0.1  ||  Not(IsPickVal(Trial_Loss_Reason__c ,&quot;&quot;)) ||  Not(IsPickVal(Loss_Reason__c ,&quot;&quot;)) ||  IsPickVal(Opportunity_Source__c ,&quot;Exclude&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if reached stage 0.1 or was disqualified</inlineHelpText>
        <label>S-0.1 or Disqual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope_of_Account__c</fullName>
        <inlineHelpText>Tier 1 (25+ potential makers on this account)
Tier 2 (10-24 potential makers on this account)
Tier 3 (5-10 potential makers on this account)
Tier 4 (Less than 5 potential makers on this account)</inlineHelpText>
        <label>Scope of Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                    <label>Tier 1 Tier 1 (25+ potential makers )</label>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                    <label>Tier 2 (10-24 potential makers)</label>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                    <label>Tier 3 (5-10 potential makers)</label>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                    <label>Tier 4 (&lt; 5 potential makers)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <inlineHelpText>The last date of the contract/service</inlineHelpText>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <description>Copy of &quot;Created Date&quot; for NEW Opportunities. Older opportunities before migration will have this field imported manually.</description>
        <inlineHelpText>Copy of &quot;Created Date&quot; for NEW Opportunities.</inlineHelpText>
        <label>Trial Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>of_Makers_in_Use__c</fullName>
        <formula>Project__r.Project_makers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Makers in Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Territory__c</fullName>
        <formula>Text(Account.Sales_territory__c)</formula>
        <inlineHelpText>Sales Territory on the Account</inlineHelpText>
        <label>Account Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Sales__c</fullName>
        <formula>Not(IsPickVal(First_Sales_Owner_Team__c,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <inlineHelpText>Billing schedule: Annual, Bi-Annual, Quarterly,etc.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_Credited_To__c</fullName>
        <formula>if( Max_Stage_Achieved__c &gt;= 1 || (IsWon &amp;&amp; IsBlank(Date_Self_Service_Subscribed__c)), &quot;Sales&quot;, &quot;Self Service&quot;) &amp; 

IF( IsWon ,&quot;&quot;,

IF(IsClosed, &quot;-Lost&quot;,&quot;-Open&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Credited To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Score__c</fullName>
        <inlineHelpText>0-Seller has not identified competitive offerings and/or initiatives
1-Seller has identified legitimate competitors but has not established and confirmed differentiation
2-Seller has identified the critical few competitors can effectively describe and defend our differentiation</inlineHelpText>
        <label>Competition Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MEDDICC_Score</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Payouts__c</fullName>
        <label>Completed Payouts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Sales_Closed__c</fullName>
        <label>Date Sales Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Closed__c</fullName>
        <formula>if( IsClosed , today() -  CloseDate , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since closed, null for open opportunities</inlineHelpText>
        <label>Days Since Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Stage_1_to_2__c</fullName>
        <formula>IF(  S_1_0_Sales__c  ,
Max(0,Date_Transferred_to_2_0__c - Date_Transferred_to_1_0__c)

,null)</formula>
        <label>Days Stage 1 to 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <inlineHelpText>How are we positioned relative to the business’s financial and vendor criteria?</inlineHelpText>
        <label>Decision Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Sales_Owner__c</fullName>
        <label>Final Sales Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sales_Owner__c</fullName>
        <inlineHelpText>First owner of the opportunity on the sales team</inlineHelpText>
        <label>First Sales Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Reason__c</fullName>
        <label>LD Routing Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Routing_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Charge_Count__c</fullName>
        <label>Open Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Payout_Count__c</fullName>
        <label>Open Payout Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Workflows__c</fullName>
        <description>ICP data</description>
        <label>Product Maturity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Workflows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Ops_Notes__c</fullName>
        <inlineHelpText>Notes made by the Renewal Ops Team</inlineHelpText>
        <label>Renewal Ops Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stripe_Invoice_ID__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Invoice ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Term__c</fullName>
        <inlineHelpText>Number of months in the contact</inlineHelpText>
        <label>Term(Months)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Loss_Reason__c</fullName>
        <label>Trial Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Loss_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vitally_Next_Step__c</fullName>
        <formula>Project__r.Vitally_Next_Step__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Vitally Next Step</inlineHelpText>
        <label>Vitally Next Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_Project_PB_ID__c</fullName>
        <label>tmp Project PB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARR_Expected_Value__c</fullName>
        <description>ARR that has been probability weighted based on stage</description>
        <formula>Probability *  ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR * Probability</inlineHelpText>
        <label>ARR (Expected Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_6sense_6QA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The 6QA status of the account for the product.

The values are either:
1 = 6QA
0= Not 6QA

Stamped by process builder at Opp Creation.</description>
        <label>Account - 6sense 6QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Team__c</fullName>
        <formula>Text(Account.Owner.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Owner team</inlineHelpText>
        <label>Account Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Test_Formula__c</fullName>
        <description>Used for SOPs testing purposes.</description>
        <formula>IF( Not(Isnull( Date_Transferred_to_0_2__c)),
IF(Date_Transferred_to_0_2__c -  Date_Transferred_to_0_1__c &lt; 0, &quot;[0.1&gt;0.2]&quot;, null), null) &amp; 
IF( Not(Isnull( Date_Transferred_to_1_0__c)),
IF(Date_Transferred_to_1_0__c -  Date_Transferred_to_0_2__c &lt; 0, &quot;[0.2&gt;1.0]&quot;, null), null) &amp; 
IF( Not(Isnull( Date_Transferred_to_2_0__c)),
IF(Date_Transferred_to_2_0__c -  Date_Transferred_to_1_0__c &lt; 0, &quot;[1.0&gt;2.0]&quot;, null), null) &amp; 
IF( Not(Isnull( Date_Transferred_to_3_0__c)),
IF(Date_Transferred_to_3_0__c -  Date_Transferred_to_2_0__c &lt; 0, &quot;[2.0&gt;3.0]&quot;, null), null) &amp; 
IF( Not(Isnull( Date_Transferred_to_4_0__c)),
IF(Date_Transferred_to_4_0__c -  Date_Transferred_to_3_0__c &lt; 0, &quot;[3.0&gt;4.0]&quot;, null), null) &amp; 
IF( Not(Isnull( Date_Transferred_to_5_0__c)),
IF(Date_Transferred_to_5_0__c -  Date_Transferred_to_4_0__c &lt; 0, &quot;[4.0&gt;5.0]&quot;, null), null)</formula>
        <inlineHelpText>Delta between New Business sold and current project ARR</inlineHelpText>
        <label>Admin Test Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Captured_Transfers__c</fullName>
        <label>Captured Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Columns__c</fullName>
        <label>Competitor Columns</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Close_Date__c</fullName>
        <formula>IF( Not(IsWon ) &amp;&amp;  IsClosed ,
IF(IsBlank(  Trial_End_Date__c  ),&quot;&quot;,
  IF( Abs(Trial_End_Date__c   -  CloseDate ) &gt; 1, &quot;Correction Needed&quot;,&quot;&quot;)),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correct Close Date?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Must_Haves__c</fullName>
        <description>What are the must haves from current functionality? And why?</description>
        <inlineHelpText>What are the must haves from current functionality? And why? E.g. cloud compliance, admin capabilities, reporting functionality, security, integrations or APIs</inlineHelpText>
        <label>Current Must Haves</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_since_Created__c</fullName>
        <formula>now()-  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Stage_Achieved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Stage Achieved</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_S1_to_Close__c</fullName>
        <formula>IF( S_0_1_Sales__c ,

Max(0,(Year(CloseDate) - Year(Date_Transferred_to_1_0__c )) * 12  + month(CloseDate) - month(Date_Transferred_to_1_0__c )),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Months between stage 1 and Closed Won Date</inlineHelpText>
        <label>Months - S1 to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_S2_to_Close__c</fullName>
        <formula>IF( S_0_2_Sales__c ,

Max(0,(Year(CloseDate) - Year(Date_Transferred_to_2_0__c )) * 12  + month(CloseDate) - month(Date_Transferred_to_2_0__c )),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Months between stage 2 and Close date</inlineHelpText>
        <label>Months - S2 to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_to_Auto_Close__c</fullName>
        <formula>Past_Due__c &amp;&amp; 
( Project__r.Current_Backend_Stage__c = &quot;Deleted&quot; || 
  Project__r.Current_Backend_Stage__c = &quot;Trial Expired&quot; ||
  Project__r.Current_Backend_Stage__c = &quot;Placeholder&quot; ||
  IsPickVal( Type , &quot;Expansion - Upsell&quot;)
) &amp;&amp; 

 Max_Stage_Achieved__c &lt; 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Should this opp be closed lost by automatic process</inlineHelpText>
        <label>Need to Auto Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step_Category__c</fullName>
        <label>Next Step Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deep Dive Demo</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Product Workshop/Best Practices</fullName>
                </value>
                <value>
                    <fullName>Executive Alignment Call</fullName>
                </value>
                <value>
                    <fullName>In Procurement (Security, Legal)</fullName>
                </value>
                <value>
                    <fullName>Negotiating Price</fullName>
                </value>
                <value>
                    <fullName>Onboarding Planning With CS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step_Due_Date__c</fullName>
        <label>Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_In_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sales Manager field to track opps that are In or Out in regards to forecasting. True = In, Unchecked = Out</inlineHelpText>
        <label>Opportunity In/Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <inlineHelpText>The source this opportunity was generated from.</inlineHelpText>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Opportunity_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Plan_Link__c</fullName>
        <inlineHelpText>This is a secure link to the Outreach Success Plan</inlineHelpText>
        <label>Outreach Plan Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Parent_Opportuinty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Net number of days</inlineHelpText>
        <label>Payment Terms (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Date_Check__c</fullName>
        <formula>IF(IsPickVal( Type,&quot;Renewal&quot;) &amp;&amp; Not(IsClosed),
datevalue( Project__r.etl_subscription_end_date__c) - CloseDate,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Date Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Email_Date__c</fullName>
        <label>Renewal Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retained_Transfers__c</fullName>
        <label>Retained Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevOps_Deal_Status__c</fullName>
        <label>[RevOps] - Deal Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reversed_Transfers__c</fullName>
        <label>Reversed Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <inlineHelpText>Official Start Date of the subscription</inlineHelpText>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Num_Snapshot__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stage (# Snapshot)</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TS_Assigned_to_SDR__c</fullName>
        <inlineHelpText>Date opportunity was first assigned to sdr</inlineHelpText>
        <label>[TS] Assigned to SDR</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Watchdog_max_stage__c</fullName>
        <description>Checks if the Max Stage Achieved is the same or higher than the Stage # and Stage Snapshot #.</description>
        <formula>OR(

AND(
Max_Stage_Achieved__c  &lt;  Stage_Numeric__c ,
Stage_Numeric__c  &lt; 6),

AND(
Max_Stage_Achieved__c  &lt;  Stage_Num_Snapshot__c,
Stage_Num_Snapshot__c  &lt; 6))</formula>
        <label>Watchdog - Max Stage Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>temp_projectSource__c</fullName>
        <label>temp_projectSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Alias__c</fullName>
        <formula>Account.Owner.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Pipeline_Added__c</fullName>
        <description>Date when the stage was moved above 1.0.</description>
        <label>Date Pipeline Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_2_0_or_Lost__c</fullName>
        <formula>IF(IsNull(Date_Transferred_to_1_0__c),null,
IF(IsNull(Date_Transferred_to_2_0__c),
IF( IsClosed &amp;&amp; Not(IsWon),  CloseDate ,null),Date_Transferred_to_2_0__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date to 2.0 or Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Stage_0_to_0_1__c</fullName>
        <formula>IF( S_0_1_Sales__c ,

Date_Transferred_to_0_1__c -  datevalue(CreatedDate) 
, Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Stage 0 to 0.1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funnel_New_Business__c</fullName>
        <formula>and( 
Account.Name &lt;&gt; &quot;productboard&quot;, 
 ISPICKVAL( Type ,&quot;New Business&quot;)  
)</formula>
        <label>Funnel - New Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funnel_Self_Service__c</fullName>
        <formula>RecordType.Name  = &quot;Self Service&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Self service Opp</inlineHelpText>
        <label>Funnel - Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Premium_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Premium Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_Pain_Score__c</fullName>
        <inlineHelpText>0-Seller has not identified the Pains or Compelling Event that would cause the customer to take action
1-Seller can articulate the customer’s Pains but cannot define who is impacted or what the quantified impact is
2-Seller understands the customer’s Pains and knows who is impacted and what the quantified impact will be</inlineHelpText>
        <label>Identify Pain Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MEDDICC_Score</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LD_Re_Trigger_Field__c</fullName>
        <label>LD Trigger Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Rights_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, the customer has signed a contract in which they have not granted ProductBoard the right to use its name and logos for marketing materials.</description>
        <inlineHelpText>If this field is checked, the customer has signed a contract in which they have not granted ProductBoard the right to use its name and logos for marketing materials.</inlineHelpText>
        <label>Logo Rights Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_to_Competition__c</fullName>
        <label>Lost to Competition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Transfer_Count__c</fullName>
        <label>Open Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_lost_reason__c</fullName>
        <inlineHelpText>Mandatory for loss</inlineHelpText>
        <label>Primary lost reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption: Productboard wasn&apos;t adopted by team</fullName>
                </value>
                <value>
                    <fullName>Value: Not seeing results with Productboard</fullName>
                </value>
                <value>
                    <fullName>Product: Missing product features</fullName>
                </value>
                <value>
                    <fullName>Budget: Price too high for value</fullName>
                </value>
                <value>
                    <fullName>Competition: Moving to a new system</fullName>
                </value>
                <value>
                    <fullName>Acquisition: Company was acquired</fullName>
                </value>
                <value>
                    <fullName>Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Lack of Support: Didn&apos;t have enough services or support from Productboard</fullName>
                </value>
                <value>
                    <fullName>Budget cut due to economy (product/workforce)</fullName>
                    <isActive>false</isActive>
                    <label>Budget cut due to economy (product/workforce)</label>
                </value>
                <value>
                    <fullName>Price point too high</fullName>
                    <isActive>false</isActive>
                    <label>Price point too high</label>
                </value>
                <value>
                    <fullName>Shifted priorities/Change Management</fullName>
                    <isActive>false</isActive>
                    <label>Shifted priorities/Change Management</label>
                </value>
                <value>
                    <fullName>The person who championed Productboard left</fullName>
                    <isActive>false</isActive>
                    <label>The person who championed Productboard left</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Gaps_if_any__c</fullName>
        <label>Product Gaps (if any)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insights management</fullName>
                </value>
                <value>
                    <fullName>Prioritization</fullName>
                </value>
                <value>
                    <fullName>Roadmapping</fullName>
                </value>
                <value>
                    <fullName>Collaboration across teams</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>APIs and integrations</fullName>
                </value>
                <value>
                    <fullName>UI / UX</fullName>
                </value>
                <value>
                    <fullName>Performance issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevOps_Contract_URL__c</fullName>
        <label>[RevOps] - Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales_Accepted_Date__c</fullName>
        <formula>Date_Transferred_to_2_0__c</formula>
        <inlineHelpText>The date the opp is moved to stage 2 (Pipeline).</inlineHelpText>
        <label>Sales Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Partner_SA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Partner SA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Partner Contact)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Prioritizing__c</fullName>
        <inlineHelpText>Trial Signup Answer</inlineHelpText>
        <label>Survey Prioritizing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Quant_Answers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Product_Type__c</fullName>
        <inlineHelpText>Trial Signup Survey Answer</inlineHelpText>
        <label>Survey Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_PM_tool_before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used PM tool before?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test_project_status__c</fullName>
        <formula>IF( RecordType.Name = &quot;Standard&quot;,
   IF( Max_Stage_Achieved__c &lt; 0.2, &quot;Sales Routed (not contact)&quot;,&quot;Sales Routed&quot;),
   IF( RecordType.Name = &quot;Self Service&quot;, &quot;SS Routed&quot;,&quot;Other&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Routed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter_party_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Ironclad integration</description>
        <inlineHelpText>Who will be signing the MSA and DPA?</inlineHelpText>
        <label>Counter-party Signer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Counter-party Signer)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_Formula__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_at_Creation__c</fullName>
        <formula>Customer_Status_at_Creation__c = &quot;1.0 Customer&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Already a customer when the opportunity is created?</inlineHelpText>
        <label>Customer at Creation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depth_of_Opportunity__c</fullName>
        <label>Depth of Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature specific within a larger product org</fullName>
                </value>
                <value>
                    <fullName>Single product within a larger product org</fullName>
                </value>
                <value>
                    <fullName>Product portfolio w/in a larger product org</fullName>
                </value>
                <value>
                    <fullName>Entire product org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Score__c</fullName>
        <inlineHelpText>0-Seller has not identified the  Economic Buyer for this  opportunity
1-Seller has identified the Economic  Buyer but hasn’t established access  and/or cannot define the solution  preference
2-Seller has established access to the  Economic Buyer and their preference for our solution</inlineHelpText>
        <label>Economic Buyer Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MEDDICC_Score</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Title__c</fullName>
        <formula>Economic_Buyer_Contact__r.Title</formula>
        <label>Economic Buyer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Economic_Impact_2022__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if deal has been pushed or lost due to 2022 economic situation.</description>
        <inlineHelpText>Used to indicate if deal has been pushed or lost due to 2022 economic situation.</inlineHelpText>
        <label>Economic Impact 2022</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>